--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "lint:fix": "eslint src/ --fix"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.13",
+    "@heroicons/react": "^2.0.17",
     "@next/font": "13.2.4",
     "autoprefixer": "^10.4.14",
     "eslint": "8.37.0",
